# HackTues12

./: .env.example  .gitignore  DASHBOARD_OVERHAUL_PLAN.md  KYC_ENTERPRISE_PLAN.md  PROPOSAL_WIZARD_REFIT.md  PROPOSAL_WIZARD_VERTICAL_PLAN.md  README.md  package.json  pnpm-lock.yaml  setup.sh
.gemini/: GEMINI.md
apps/ai-engine/: package.json
apps/ai-engine/src/: debateService.js
apps/ai-worker/: .env.example  README.md  package-lock.json  package.json
apps/ai-worker/deploymentTf/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
apps/ai-worker/src/: IMPLEMENTATION_SUMMARY.md  config.js  debateService.js  internetResearch.js  jsonUtils.js  openrouter.js  server.js
apps/canisters/: dfx.json  package.json
apps/canisters/src/: index.did  index.ts
apps/contracts/: .gitignore  package.json
apps/contracts/consensus_mechanism/: .gitignore  Cargo.toml  LOCAL_TESTING.md  dfx.json
apps/contracts/consensus_mechanism/ledger/: README.md
apps/contracts/consensus_mechanism/scripts/: local_dev_chain.sh  validate_chain.sh
apps/contracts/consensus_mechanism/src/: consensus_mechanism.did  lib.rs
apps/contracts/icp_proposals_mvp/: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  icp_proposals_mvp.did  package-lock.json  package.json
apps/contracts/icp_proposals_mvp/src/: lib.rs
apps/contracts/scanner/: index.html  package-lock.json  package.json  vite.config.js
apps/contracts/scanner/src/: icp_proposals_idl.js  main.js  styles.css
apps/ocr-service/: .env.example  .gitignore  README.md  pyproject.toml
apps/ocr-service/app/: config.py  main.py  models.py  openrouter.py  pipeline.py
apps/ocr-service/tests/: test_api.py
apps/recomendation-engine/: .gitignore  Cargo.toml  README.md
apps/recomendation-engine/data/: bootstrap.json
apps/recomendation-engine/src/: api.rs  config.rs  engine.rs  main.rs  models.rs  source.rs
apps/veriff-server/: .env.example  Cargo.toml  README.md
apps/veriff-server/src/: main.rs
apps/web/: .env.example  .gitignore  package.json  tailwind.config.ts  tsconfig.json
apps/web/spec/: hosting.md  internet-identity.md  master.md  migrations.md  project.md  tableland.md  todo.md  trpc.md
research/: AGENTIC_DEBATE_MODELS_RESEARCH.md  frontend-backend-recommendation-summary.md
(+122 files in other folders)
