[package]
name = "consensus_mechanism"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
crc32fast = "1"
hex = "0.4"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
ic-stable-structures = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
